Had to fix the search bar. The Text was overlapping with the search icon.

--- a/style.css
+++ b/style.css
@@ -117,6 +117,6 @@ a:hover {
   border-radius: 24px;
   margin: 20px 0;
   box-shadow: 0 0 2px #888;
-  padding-left: 20px;
+  padding-left: 40px;
   font-size: 16px;
 }
